# check_email_list

./: .gitignore  setup.cfg
docs/doc/: index.rst
src/qdd_emails/: __init__.py  __main__.py
src/qdd_emails/data/input/: email.csv  proxies.txt  user_agents.txt
src/qdd_emails/data/output/: email_checked.csv
