[metadata]
name = """qdd_emails"""
version = """0.1.0"""
author = """Matthieu Daviaud"""
author_email = """matthieu.daviaud@gmail.com"""
description = """Check validity, verify existence and suggest corrections for a list of email addresses"""
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    
    License :: OSI Approved :: MIT License
    
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src